[package]
name = "rust_cms_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
rsa = { version = "0.9.6", features = ["sha2"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.128"
serde_bytes = "0.11.15"
sha1 = "0.10.6"
sha2 = "0.10.8"
p12-keystore = "0.1.3"
der = "0.7.9"
hex = "0.4.3"
x509-parser = "0.16.0"
chrono = "0.4.38"
plist = "1.7.0"
cms = { version = "0.2.3", features = ["builder"] }