[package]
name = "rust_cms_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
rsa = { version = "0.9.6", features = ["sha2"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.128"
serde_bytes = "0.11.15"
sha1 = "0.10.6"
sha2 = "0.10.8"
pem = "3.0.4"
p12-keystore = "0.1.3"
der = "0.7.9"
hex = "0.4.3"
base64 = "0.22.1"
pkcs1 = "0.8.0-rc.1"
uuid = { version = "1.11.0", features = ["v4"] }
rand = "0.9.0-alpha.2"
minicbor = { version = "0.25.1", features = ["derive", "alloc"] }
oid-registry = "0.7.1"
ring = "0.17.8"
scroll = "0.12.0"
spake2 = "0.4.0"
spki = { version = "0.7.3", features = ["pem"] }
bcder = "0.7.4"
thiserror = "1.0.64"
x509-parser = "0.16.0"
x509-certificate = "0.23.1"
cryptographic-message-syntax = "0.26.0"
chrono = "0.4.38"
plist = "1.7.0"
cms = { version = "0.2.3", features = ["builder"] }
log = "0.4.22"